fixing vertical alignment

--- a/css/index.css
+++ b/css/index.css
@@ -6,7 +6,7 @@
 
   /* center on y and x-axis*/
   position: absolute;
-  margin: -417px -203.5px;
+  margin: -396px -203.5px;
   top: 50%;
   left: 50%;
 }
